--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <table cellspacing="20">
       <tr>
-        <td><img src="images/kaam chalo.jpeg" alt="Work logo"></td>
+        <td><img src="images/kaam chalo.png" alt="Work logo"></td>
         <td><h1>KAAM CHALO</h1> <p>This is an application where <strong>employment for the workers </strong> is provided</p></td>
       </tr>
     </table>
